# smart_hosts

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  index.html  package-lock.json  tailwind.config.js
assets/: entitlements.plist
smart-hosts/: Cargo.toml  build.rs
smart-hosts-bridge/: Cargo.toml
smart-hosts-bridge/src/: lib.rs
smart-hosts/src/: core.rs  lib.rs  main.rs
smart-hosts/src/monitor/: mod.rs
smart-hosts/src/monitor/macos/: cl_location_manager_delegator.rs  mod.rs  nw_interface.rs  nw_path.rs  nw_path_monitor.rs
src/: app.rs  core.rs  main.rs  preferences.rs  tray.rs  utils.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: Preferences.json  Tray.json  default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/monitor/macos/: mod.rs  nw_interface.rs
style/: base.css
