[package]
name = "smart-hosts"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = { version = "0.18.1", features = ["logging"] }
log.workspace = true

[dev-dependencies]
ctor = "0.2.8"
env_logger = "*"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
block2 = "0.5.1"
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-core-wlan = { version = "0.2.2", features = ["all"] }
objc2-core-location = { version = "0.2.2", features = [
  "CLLocationManagerDelegate",
  "CLLocationManager",
] }
dispatch = { git = "https://github.com/turbocool3r/rust-dispatch.git" }
